[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "HousingAnalysis"
version = "0.0.1"
description = "Housing Analysis repo"
readme = "README.md"
license = {text = "MIT License"}
keywords = ["housing", "machine learning", "statistics", "economics"]
authors = [
  {name = "RBC"}
]
maintainers = [
  {name = "RBC"}
]
requires-python = ">=3.10"
dependecies = [
    "pandas>=2.0.0",
    "numpy>=2.0.0",
    "matplotlib>=3.0.0",
    "seaborn>=0.13.0",
    "scikit-learn>=1.5.0",
    "scipy>= 1.14.0",
    "dash >= 2.18.0",
    "pyod >= 2.0.0",
    "fredapi >= 0.5.0",
    "yfinance >= 0.2.50",
    "statsmodels >= 0.14.0",
    "QuantLib >= 1.30",
    "prophet >= 1.1.6",
    "darts >= 0.31.0",
    "pycaret >= 3.3.2",
    ]

[project.urls]
homepage = "https://github.com/rboletcafaro/HousingAnalysis"
repository = "https://github.com/rboletcafaro/HousingAnalysis"

