[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "HousingAnalysis"
version = "0.1.0"
description = "Housing Analysis repo"
readme = "README.md"
license = { text = "MIT License" }
keywords = ["housing", "machine learning", "statistics", "economics"]
authors = [{ name = "RBC", email = "your_email@example.com" }]
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.2",
    "pyod>=1.1.0",
    "tqdm>=4.65.0",
    "scipy>=1.10.1",
    "jupyter>=1.0.0",
    "nbformat>=5.8.0",
    "nbconvert>=7.3.0",
    "openpyxl>=3.1.2",
    "plotly>=5.15.0",
    "dash>=2.11.1",
    "darts>=0.24.0"
]

[project.urls]
homepage = "https://github.com/robletcafaro/HousingAnalysis"
repository = "https://github.com/robletcafaro/HousingAnalysis"