[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "HousingAnalysis"
version = "0.1.0"
description = "Housing Analysis repo"
readme = "README.md"
license = { text = "MIT License" }
keywords = ["housing", "machine learning", "statistics", "economics"]
authors = [{ name = "RBC", email = "your_email@example.com" }]
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.23.0",
    "matplotlib>=3.10.0",
    "seaborn>=0.13.0",
    "scikit-learn>=1.5.0",
    "scipy>= 1.11.4",
    "dash >= 2.18.0",
    "pyod >= 2.0.0",
    "fredapi >= 0.5.0",
    "yfinance >= 0.2.50",
    "statsmodels >= 0.14.0",
    "QuantLib >= 1.30",
    "prophet >= 1.1.6",
    #"darts >= 0.31.0",
    "pycaret >= 3.3.2",
    "requests >= 2.32.3"

    
    
    
]

[project.urls]
homepage = "https://github.com/robletcafaro/HousingAnalysis"
repository = "https://github.com/robletcafaro/HousingAnalysis"